
	Auto-resize position field on the status bar to fit the text.  Thanks to
	ranousse.

	Added fallback to use "XDG Base Directory Specification" when failed to
	find configuration in other places.  Thanks to Miodrag Tokić (a.k.a.
	loonies).

	Added %px, %py, %pw and %ph macros that describe location and dimensions
	of preview area to use in external commands.  Thanks to Stephano (a.k.a.
	cao).

	Switch to utf-8 internal representation of paths on Windows.  This fixes
	issues when file name encoding doesn't match system encoding.  Thanks to
	Stas Panteleev.

	Made leaving wrong (unexpectedly removed) directory more robust.  Thanks
	to willemw12.

	Significantly reduced amount of work performed by Vifm is idle.  Thanks to
	hofheinz.

	Made message dialogs interact better with everything else on the screen.
	E.g. redraw properly after terminal resize.

	United last pattern of :substitute command with search history.  Thanks to
	filterfalse.

	Made configure script lookup curs_set in libtinfo.

	Redirect both standard output and error streams from viewers (already was
	the case for Windows).

	Don't lose previously saved filter on repeated resetting (pressing zO twice
	in a row caused previous filter values to be lost).

	Extended :sync command to support selective synchronization (user can
	choose among location, cursor position, local options and filters).
	Thanks to filterfalse.

	Automatically install sample vifmrc and help file on first start on
	Windows.

	Redraw UI on resize during file operation when 'syscalls' is set.

	Quit fast on --help/--version.  Thanks to Svyatoslav Mishyn, a.k.a. juef.

	Parse paths that start with plus sign as command-line arguments more
	carefully (don't treat them as startup commands).

	Fixed search messages in menus (nth time...).

	Fixed automatic finishing in some situation when no terminal is available.
	Thanks to tYGjQCsvVI.

	Fixed crash on navigation to end of line in command-line mode.  Thanks to