@@ -120,9 +120,11 @@ update_compile_info:
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
 
+MANGEN := groff
+
 ../data/vifm-help.txt: ../data/vifm.1
-	@if [ "x$$(which groff)" != "x" -a "x$$(which sed)" != "x" ]; then \
-		groff -Tutf8 -man ../data/vifm.1 | sed -e 's/.\x08//g' -e 's/\x1b\[[0-9]*m//g' -e 's/\r//g' >| '$@'; \
+	@if [ "x$$(which $(MANGEN))" != "x" -a "x$$(which sed)" != "x" ]; then \
+		$(MANGEN) -Tutf8 -man ../data/vifm.1 | sed -e 's/.\x08//g' -e 's/\x1b\[[0-9]*m//g' -e 's/\r//g' >| '$@'; \
 	fi
 
 tags.c: ../data/vim/doc/app/vifm-app.txt
